--- a/채호경/main.css
+++ b/채호경/main.css
@@ -3,11 +3,19 @@
 } */
 
 header {
-    text-align: center;
-    height: 30%;
+    height: 20%;
     display: flex;
-    justify-content: center;
 }
+
+header>h2 {
+    align-self: center;
+    border-bottom: 5px solid #ffabab;
+}
+
+h3 {
+    text-align: start;
+}
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -15,8 +23,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 input {
-    width: 20%;
-    height: 50px;
+    width: 40%;
     border-radius: 4px;
     font-size: 50px;
 }
@@ -25,13 +32,21 @@ input {
     height: 30%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .resultElements {
-    height: 30%;;
+    height: 30%;
+    ;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     margin: 1% 0px;
+}
+
+.result {
+    color: #ffabab;
+    font-weight: bold;
+    font-size: 50px;
 }
